# cplusplus_project_template

./: .clang-format  CMakeLists.txt  LICENSE
app/: AppConfigurator.cc  AppConfigurator.hpp  AppParameters.cc  AppParameters.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Main.cc  MainWindow.cc  MainWindow.hpp
app/boot/: AppBoot.cc  AppBoot.hpp  AppFactory.cc  AppFactory.hpp  AppParameters.cc  AppParameters.hpp  ApplicationLauncher.cc  ApplicationLauncher.hpp  Startup.cc  Startup.hpp
app/boot/config/: AppParameters.hpp
app/consoleApp/: ConsoleExecutor.cc  ConsoleExecutor.hpp
app/interface/: IApplicationExecutor.hpp  IStartupFunction.hpp  IStartupTask.hpp
app/qtApp/: QtExecutor.cc  QtExecutor.hpp
app/qtApp/widget/: QtMainWindow.cc  QtMainWindow.hpp
app/widget/: MainWindow.cc
app_server/: CMakeLists.txt  Main.cc  RpcServiceImpl.cc  RpcServiceImpl.hpp  ServerMain.cc  ServiceMain.cc
app_server/config/: glog_config.yaml  grpc.yaml
app_server/rpc/: RpcServiceImpl.cc  RpcServiceImpl.hpp
app_server/task/: GrpcOptions.hpp  MainTask.cc  MainTask.hpp  ServerTask.hpp  ServiceTask.cc  ServiceTask.hpp
ci/: CMakeLists.txt  TestBoost.cc  TestBoost.cpp  TestRunner.cpp
ci/gtest_ut/algorithm/: DijkstraTest.cc
client/: CMakeLists.txt  Main.cc  main.cc
client/include/rpc/: RpcClient.hpp
client/include/task/: ClientTask.hpp  GrpcOptions.hpp
client/src/: ClientMain.cc  application-dev.yml
client/src/auth/: AuthRpcClient.cc  AuthRpcClient.hpp  AuthRpcClientOptions.cc  AuthRpcClientOptions.hpp
client/src/config/: glog.yaml  grpc.yaml
client/src/rpc/: AuthRpcClient.cc  AuthRpcClient.hpp  AuthRpcClientOptions.cc  AuthRpcClientOptions.hpp  RpcClient.cc  RpcClient.hpp
client/src/task/: ClientTask.cc  ClientTask.hpp  GrpcOptions.cc  GrpcOptions.hpp
coco/: CMakeLists.txt
coco/algorithm/: DijkstraAlgorithm.cc  DijkstraAlgorithm.hpp  InterpolationAlgorithm.cc  InterpolationAlgorithm.hpp
coco/aop/: FunctionProfilerAspect.cc  FunctionProfilerAspect.hpp  LauncherAspect.cc  LauncherAspect.hpp
coco/aop/interface/: IAop.hpp
coco/filesystem/: Directory.cc  Directory.hpp  File.cc  File.hpp
coco/filesystem/io/: Console.cc  Console.hpp
coco/filesystem/nio/: ByteBuffer.cc  ByteBuffer.hpp  CharBuffer.cc  (+11 more)
coco/service/: IConfigurable.hpp
common/: CMakeLists.txt
common/algorithm/: Dijkstra.cc  Dijkstra.hpp  DijkstraAlgorithm.cc  DijkstraAlgorithm.hpp  ExponentialBackoff.cc  ExponentialBackoff.hpp  Interpolation.cc  Interpolation.hpp  InterpolationAlgorithm.cc  InterpolationAlgorithm.hpp  TopK.cc  TopK.hpp
common/aop/: FunctionProfilerAspect.cc  FunctionProfilerAspect.hpp  LauncherAspect.cc  LauncherAspect.hpp
common/crypto/: OpenSSLUtil.cc  OpenSSLUtil.hpp
common/filesystem/: Directory.cc  Directory.hpp  File.cc  File.hpp  YamlToolkit.hpp
common/format/: GenericFormatter.hpp
common/io/: AbstractFilterReader.cpp  AbstractFilterReader.hpp  AbstractFilterWriter.cpp  AbstractFilterWriter.hpp  AbstractInputStream.cpp  AbstractInputStream.hpp  AbstractOutputStream.cpp  AbstractOutputStream.hpp  AbstractReader.cpp  AbstractReader.hpp  AbstractWriter.cpp  AbstractWriter.hpp  BufferedInputStream.cpp  BufferedInputStream.hpp  BufferedOutputStream.cpp  BufferedOutputStream.hpp  BufferedReader.cpp  BufferedReader.hpp  BufferedWriter.cpp  BufferedWriter.hpp  ByteArrayInputStream.cpp  ByteArrayInputStream.hpp  ByteArrayOutputStream.cpp  ByteArrayOutputStream.hpp  CharArrayReader.cpp  CharArrayReader.hpp  CharArrayWriter.cpp  CharArrayWriter.hpp  Console.cc  Console.cpp  Console.hpp  File.cpp  File.hpp  FileInputStream.cpp  FileInputStream.hpp  FileOutputStream.cpp  FileOutputStream.hpp  FilterInputStream.cpp  FilterInputStream.hpp  FilterOutputStream.cpp  (+27 more)
common/log/: GLogConfig.cc  GLogConfig.hpp  GLogOptions.cc  GLogOptions.hpp  glogConfig.xml
common/math/: MathUtil.cpp  MathUtil.hpp
common/net/: DatagramPacket.cpp  DatagramPacket.hpp  DatagramSocket.cpp  DatagramSocket.hpp  HttpCookie.cpp  HttpCookie.hpp  InetAddress.cpp  InetAddress.hpp  InetSocketAddress.cpp  InetSocketAddress.hpp  URI.cpp  URI.hpp  URL.cpp  URL.hpp
common/nio/: ByteBuffer.cc  ByteBuffer.cpp  ByteBuffer.hpp  CharBuffer.cc  CharBuffer.cpp  CharBuffer.hpp  DoubleBuffer.cc  DoubleBuffer.cpp  DoubleBuffer.hpp  FloatBuffer.cc  FloatBuffer.cpp  FloatBuffer.hpp  IntBuffer.cc  IntBuffer.cpp  IntBuffer.hpp  LongBuffer.cc  LongBuffer.cpp  LongBuffer.hpp  ShortBuffer.cc  ShortBuffer.cpp  ShortBuffer.hpp
common/service/: BoolFunctorRegister.hpp  IConfigurable.hpp
common/thread/: DelayedTaskActuator.hpp  DelayedTaskManager.hpp  PeriodicActuator.cc  PeriodicActuator.hpp  SpinlockMutex.cc  SpinlockMutex.cpp  SpinlockMutex.hpp  TaskWrapper.hpp  ThreadPool.cc  ThreadPool.cpp  ThreadPool.hpp  TimerManager.cc  TimerManager.hpp
common/time/: Clock.cc  Clock.hpp  Date.cc  Date.cpp  Date.hpp  FunctionProfiler.cc  FunctionProfiler.hpp  SimpleDateFormatter.cc  SimpleDateFormatter.cpp  SimpleDateFormatter.hpp  TimerManager.cc  TimerManager.cpp  TimerManager.hpp
common_service/: CMakeLists.txt
common_service/config/: ConfigPath.cc  ConfigPath.hpp
common_service/interface/: IApplicationExecutor.hpp  IConfigurable.hpp  IStartupTask.hpp
common_service/log/: GLogConfigurator.cc  GLogConfigurator.hpp
glog/: CMakeLists.txt  GLogConfigurator.cc  GLogConfigurator.hpp  GLogParameters.hpp
glog/include/: GLogConfigurator.hpp  GLogParameters.hpp
glog/src/: GLogConfigurator.cc  GLogConfigurator.hpp  GLogParameters.cc  GLogParameters.hpp
log/: CMakeLists.txt
log/log/: GLogConfigurator.cc  GLogConfigurator.hpp
log/src/: CustomGlogPrefixFormatter.cc  CustomGlogPrefixFormatter.hpp  CustomLogSink.cc  CustomLogSink.hpp  GLogConfigurator.cc  GLogConfigurator.hpp  GLogParameters.cc  GLogParameters.hpp
proto/: CMakeLists.txt  Heartbeat.proto  RpcService.proto  heartbeat.proto
server/: CMakeLists.txt
server/src/: ServiceMain.cc  application-dev.yml
server_app/: CMakeLists.txt  HeartbeatServiceImpl.cc  HeartbeatServiceImpl.hpp  RpcServiceImpl.cc  RpcServiceImpl.hpp  ServerMain.cc
ut/: CMakeLists.txt
(+1149 files in other folders)
